--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
         <!-- Home Post List -->
         {% for post in site.posts limit : 5 %}
 
-        <article class="post-preview">
+        <!-- <article class="post-preview">
           <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
             <h2 class="post-title">{{ post.title }}</h2>
             {% if post.subtitle %}
@@ -52,7 +52,16 @@ layout: default
           </p>
         </article>
 
-        <hr>
+        <hr> -->
+        <div class="post-content">
+          <h1>
+            {{ post.title }}
+          </h1>
+          {% if page.image %}
+            <div class="featured-image">
+              <img src="{{page.image}}">
+            </div>
+          {% endif %}
 
         {% endfor %}
 
