--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@ layout: default
 
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">Works &rarr;</a>
+          <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All Works &rarr;</a>
         </div>
 
       </div>
