--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,9 +32,9 @@ layout: default
         <!-- Home Post List -->
 
         <!-- Pager -->
-        <div class="clearfix">
+        <!-- <div class="clearfix">
           <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All Works &rarr;</a>
-        </div>
+        </div> -->
 
       </div>
     </div>
