--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
               <a href="#">{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}</a>
               on {{ page.date | date: '%B %d, %Y' }} &middot;
                <!-- {% include read_time.html -->
-              content=page.content %}
+              <!-- content=page.content %} -->
             </span>
           </div>
         </div>
